@@ -992,6 +992,7 @@
 #define IDC_GLOBAL_PFREFLECTION_CHECK   821
 #define IDC_BUMPER_SKIRT_ANIM           822
 #define IDC_CUSTOM_PARAMS               823
+#define IDC_OBJECT_SPACE_NORMALMAP      824
 #define DISPID_Gate_Height1             1142
 #define DISPID_Image                    1500
 #define DISPID_Image2                   1501
@@ -1155,7 +1156,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        647
 #define _APS_NEXT_COMMAND_VALUE         4022
-#define _APS_NEXT_CONTROL_VALUE         824
+#define _APS_NEXT_CONTROL_VALUE         825
 #define _APS_NEXT_SYMED_VALUE           188
 #endif
 #endif
