@@ -1785,34 +1785,38 @@ BEGIN
     EDITTEXT        DISPID_ROTRA9,24,184,40,12,ES_AUTOHSCROLL
 END
 
-IDD_PROPPRIMITIVE_VISUALS DIALOGEX 0, 0, 125, 206
+IDD_PROPPRIMITIVE_VISUALS DIALOGEX 0, 0, 125, 230
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     GROUPBOX        "3D Mesh",IDC_STATIC,7,3,111,30
     PUSHBUTTON      "Import Mesh",IDC_LOAD_MESH_BUTTON,11,13,46,14
-    PUSHBUTTON      "Export Mesh",IDC_EXPORT_MESH_BUTTON,65,13,46,14
+    PUSHBUTTON      "Export Mesh",IDC_EXPORT_MESH_BUTTON,68,13,46,14
     LTEXT           "Image",IDC_STATIC,7,34,20,8
     COMBOBOX        DISPID_Image,7,43,111,124,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Normal Map",IDC_STATIC,7,70,39,8
-    COMBOBOX        DISPID_Image2,7,79,111,69,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Material",IDC_STATIC,7,95,63,9
-    COMBOBOX        IDC_MATERIAL_COMBO,7,103,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Visible",103,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,119,56,10
-    CONTROL         "Static Rendering",IDC_STATIC_RENDERING_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,129,69,10
+    LTEXT           "Normal Map",IDC_STATIC,7,72,39,8
+    CONTROL         "Object Space",IDC_OBJECT_SPACE_NORMALMAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,67,71,58,10
+    COMBOBOX        DISPID_Image2,7,81,111,69,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Material",IDC_STATIC,7,97,63,9
+    COMBOBOX        IDC_MATERIAL_COMBO,7,105,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Visible",103,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,121,56,10
+    CONTROL         "Static Rendering",IDC_STATIC_RENDERING_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,131,69,10
     CONTROL         "Reflection Enabled",IDC_PRIM_REFLECT_ENABLE_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,139,76,10
-    CONTROL         "Draw Textures inside",106,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,149,82,10
-    LTEXT           "Depth Bias",IDC_STATIC,83,120,36,8
-    EDITTEXT        IDC_DEPTH_BIAS,82,129,36,12,ES_AUTOHSCROLL
-    LTEXT           "Disable Lighting (0..1)",IDC_STATIC,7,160,74,10
-    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING,82,158,36,12,ES_AUTOHSCROLL
-    LTEXT           "Disable Lig.f.below (0..1)",IDC_STATIC,7,175,78,10
-    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING_FROM_BELOW,82,173,36,12,ES_AUTOHSCROLL
-    LTEXT           "Legacy/Sides",IDC_STATIC,7,189,45,8
-    EDITTEXT        101,53,188,20,12,ES_AUTOHSCROLL
-    LTEXT           "Editor",IDC_STATIC,77,189,20,8
-    EDITTEXT        IDC_EDGE_FACTOR_UI,98,188,20,12,ES_AUTOHSCROLL
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,141,76,10
+    CONTROL         "Render backfacing transparent",IDC_PRIMITIVE_ENABLE_BACKFACES,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,151,115,10
+    LTEXT           "Triangles (slower, but accurate)",IDC_STATIC,17,162,102,9
+    CONTROL         "Draw Textures inside",106,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,171,82,10
+    LTEXT           "Depth Bias",IDC_STATIC,83,122,36,8
+    EDITTEXT        IDC_DEPTH_BIAS,82,131,36,12,ES_AUTOHSCROLL
+    LTEXT           "Disable Lighting (0..1)",IDC_STATIC,7,184,74,10
+    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING,82,182,36,12,ES_AUTOHSCROLL
+    LTEXT           "Disable Lig.f.below (0..1)",IDC_STATIC,7,199,78,10
+    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING_FROM_BELOW,82,197,36,12,ES_AUTOHSCROLL
+    LTEXT           "Legacy/Sides",IDC_STATIC,7,213,45,8
+    EDITTEXT        101,53,212,20,12,ES_AUTOHSCROLL
+    LTEXT           "Editor",IDC_STATIC,77,213,20,8
+    EDITTEXT        IDC_EDGE_FACTOR_UI,98,212,20,12,ES_AUTOHSCROLL
     CONTROL         "Display &Image (not perfect)",IDC_DISPLAY_TEXTURE_CHECKBOX,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,57,105,10
 END
@@ -1904,7 +1908,7 @@ BEGIN
     LTEXT           "RotX",IDC_STATIC,7,51,17,8
 END
 
-IDD_PROPPRIMITIVE_PHYSICS DIALOGEX 0, 0, 125, 180
+IDD_PROPPRIMITIVE_PHYSICS DIALOGEX 0, 0, 125, 160
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -1928,9 +1932,6 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,128,115,10
     LTEXT           "If not a Toy, reduce polygons by (0..1)",IDC_STATIC,7,141,63,16
     EDITTEXT        IDC_COLLISION_REDUCTION_FACTOR,78,142,40,12,ES_AUTOHSCROLL
-    CONTROL         "Render backfacing transparent",IDC_PRIMITIVE_ENABLE_BACKFACES,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,161,115,10
-    LTEXT           "Triangles (slower, but accurate)",IDC_STATIC,19,171,102,9
 END
 
 IDD_PROPRUBBER_PHYSICS DIALOGEX 0, 0, 125, 131
@@ -2592,7 +2593,7 @@ BEGIN
 
     IDD_PROPPRIMITIVE_VISUALS, DIALOG
     BEGIN
-        BOTTOMMARGIN, 203
+        BOTTOMMARGIN, 227
     END
 
     IDD_PROPPLUNGER_VISUALS, DIALOG
